--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,7 @@ form{
 	text-align: right;
 	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
 	grid-area: footer;
+	text-align: center;
 }
 
 @media (min-width: 1200px) {
