--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,11 @@ form{
 	height: 100%;
 }
 
+.carousel-item img{
+width: 500px;
+height: 400px;
+}
+
 .destacado .titulo a {
 	color: #fff;
 }
@@ -248,6 +253,12 @@ form{
 	background: #262626;
 }
 
+/*contacto*/
+.carousel-item-active img{
+	width: 200px;
+	height: 400px;
+}
+
 /*FOOTER */
 .container .footer {
 	background: #fff;
@@ -299,6 +310,11 @@ form{
 		grid-template-rows: auto;
 		grid-row-gap: 7px;
 	}
+.carousel-item img{
+		width: 100%;
+		height: 300px;
+		}
+	
 }
 
 
