--- a/css/style.css
+++ b/css/style.css
@@ -1,326 +1,348 @@
+@charset "UTF-8";
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 300;
-	background-image: linear-gradient(45deg, transparent 20%, black 25%, transparent 25%),
-		linear-gradient(-45deg, transparent 20%, black 25%, transparent 25%),
-		linear-gradient(-45deg, transparent 75%, black 80%, transparent 0),
-		radial-gradient(gray 2px, transparent 0);
-	background-size: 30px 30px, 30px 30px;
-	font-size: 16px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+  background-image: linear-gradient(45deg, transparent 20%, black 25%, transparent 25%), linear-gradient(-45deg, transparent 20%, black 25%, transparent 25%), linear-gradient(-45deg, transparent 75%, black 80%, transparent 0), radial-gradient(gray 2px, transparent 0);
+  background-size: 30px 30px, 30px 30px;
+  font-size: 16px;
 }
 
 img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .container {
-	width: 90%;
-	max-width: 75em;
-	margin: 1.25em auto;
-	display: grid;
-	grid-gap: 1.25em;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(4, auto);
-	grid-template-areas:
-		'header			header   	header'
-		'destacado		destacado 	destacado'
-		'contenido		contenido 	aside'
-		'footer	 		footer 		footer';
-
+  width: 90%;
+  max-width: 75em;
+  margin: 1.25em auto;
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 1.25em;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (auto)[4];
+      grid-template-rows: repeat(4, auto);
+      grid-template-areas: 'header			header   	header' 'destacado		destacado 	destacado' 'contenido		contenido 	aside' 'footer	 		footer 		footer';
 }
-
 
 /* HEADER */
 .header {
-	grid-area: header;
-	padding: 1.25em;
-	background: #fff;
-	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: header;
+  padding: 1.25em;
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+          box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
 }
-
 
 .logo h1 {
-	font-size: 1.875em;
-	text-align: center;
+  font-size: 1.875em;
+  text-align: center;
 }
 
-
 .menu {
-	border-top: 1px solid #000;
-	border-bottom: 1px solid #000;
-	display: flex;
-	justify-content: space-between;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .menu a {
-	padding: 0.625em;
-	color: #000;
-	display: block;
-	text-decoration: none;
-	text-transform: uppercase;
-	font-weight: 400;
-	width: 100%;
-	text-align: center;
-	transition: 0.2s ease all;
-	font-size: 1em;
+  padding: 0.625em;
+  color: #000;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 400;
+  width: 100%;
+  text-align: center;
+  -webkit-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+  font-size: 1em;
 }
 
 .menu a:hover {
-	background: #000;
-	color: white;
+  background: #000;
+  color: white;
 }
 
 /* Articulos */
 .articulo {
-	display: grid;
-	background: white;
-	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-	grid-template-columns: 1fr 1.3fr;
-	grid-template-rows: auto;
-	grid-column-gap: 7px;
+  display: -ms-grid;
+  display: grid;
+  background: white;
+  -webkit-box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+          box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+  -ms-grid-columns: 1fr 1.3fr;
+      grid-template-columns: 1fr 1.3fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  grid-column-gap: 7px;
 }
 
 .articulo .contenedor-texto {
-	padding: 1.25em;
-	width: 50%;
-	flex-direction: column;
-	justify-content: space-between;
-	width: 100%;
+  padding: 1.25em;
+  width: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
 }
 
 .contenedor-pequeño img {
-	width: 100%;
+  width: 100%;
 }
 
 .contenedor-pequeño video {
-	width: 100%;
-	max-width: 100%;
-	height: 200px;
+  width: 100%;
+  max-width: 100%;
+  height: 200px;
 }
 
-form{
-	width: 100%;
-	max-width: 100%;
+form {
+  width: 100%;
+  max-width: 100%;
 }
+
 .articulo .contenedor-pequeño {
-	width: 100%;
-	max-width: 100%;
+  width: 100%;
+  max-width: 100%;
 }
 
 .articulo .titulo {
-	margin-bottom: 0.625rem;
-	font-size: 1.56em;
+  margin-bottom: 0.625rem;
+  font-size: 1.56em;
 }
 
 .articulo .titulo a {
-	font-weight: 400px;
-	color: #000;
+  font-weight: 400px;
+  color: #000;
 }
 
 .articulo .fecha {
-	font-size: 1em;
-	color: #868b8d;
-	margin-bottom: 0.625em;
+  font-size: 1em;
+  color: #868b8d;
+  margin-bottom: 0.625em;
 }
 
 .articulo .oracion {
-	font-size: 1.25em;
-	line-height: 1.5625rem;
-	font-weight: 300;
-	margin-bottom: 1.25rem;
-	color: #868b8d;
+  font-size: 1.25em;
+  line-height: 1.5625rem;
+  font-weight: 300;
+  margin-bottom: 1.25rem;
+  color: #868b8d;
 }
 
 /* Articulo Destacado */
 .articulo.destacado {
-	grid-area: destacado;
-	color: white;
-	background-color: #000;
-	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-
-	display: grid;
-	grid-template-columns: 1.3fr 1fr;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: destacado;
+  color: white;
+  background-color: #000;
+  -webkit-box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+          box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1.3fr 1fr;
+      grid-template-columns: 1.3fr 1fr;
 }
 
 .articulo.destacado .contenedor-pequeño {
-	min-height: 100%;
-	width: 100%;
+  min-height: 100%;
+  width: 100%;
 }
 
 .articulo.destacado .contenedor-principal a {
-	display: inline-block;
-	width: 100%;
-	height: 100%;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
-.carousel-item img{
-width: 500px;
-height: 400px;
+.carousel-item img {
+  width: 500px;
+  height: 400px;
 }
 
 .destacado .titulo a {
-	color: #fff;
+  color: #fff;
 }
 
 .destacado .titulo::after {
-	content: '';
-	margin: 0.625em 0;
-	display: block;
-	background-color: #868686;
-	width: 6em;
-	height: 1px;
+  content: '';
+  margin: 0.625em 0;
+  display: block;
+  background-color: #868686;
+  width: 6em;
+  height: 1px;
 }
 
 .link {
-	color: #fff;
-	cursor: pointer;
-	display: inline-block;
-	padding: 0.625em;
-	background-color: #262626;
-	font-size: 1em;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	align-self: flex-end;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  padding: 0.625em;
+  background-color: #262626;
+  font-size: 1em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 .link:hover {
-	background: #000;
-	text-decoration: none;
+  background: #000;
+  text-decoration: none;
 }
 
 /* CONTENIDO*/
 .contenido {
-	grid-area: contenido;
-	display: grid;
-	grid-template-columns: 1;
-	grid-gap: 1.25rem;
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: contenido;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1;
+      grid-template-columns: 1;
+  grid-gap: 1.25rem;
 }
 
 /*SIDEBAR */
 .sidebar {
-	padding: 5em 1.56em;
-	text-align: center;
-	min-height: 6.25rem;
-	grid-area: aside;
-	background: #000;
-	color: #868b8d;
-	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-	width: 100%;
-	max-width: 100%;
+  padding: 5em 1.56em;
+  text-align: center;
+  min-height: 6.25rem;
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+  grid-area: aside;
+  background: #000;
+  color: #868b8d;
+  -webkit-box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+          box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+  width: 100%;
+  max-width: 100%;
 }
 
-.sidebar .acerca-de img {
-	border-radius: 100%;
-	height: 10em;
-	width: 10em;
-	margin-bottom: 1.56em;
+.sidebar .acerca-de .img-perfil {
+  border-radius: 100%;
+  height: 10em;
+  width: 10em;
+  margin-bottom: 1.56em;
 }
 
-.sidebar .bio {
-	margin-bottom: 1.56em;
-	font-size: 1.25em;
-	line-height: 1.5625em;
+.sidebar .acerca-de .bio {
+  margin-bottom: 1.56em;
+  font-size: 1.25em;
+  line-height: 1.5625em;
 }
 
 .sidebar .menu {
-	width: 100%;
-	display: inline-block;
-	background: #ccc;
+  width: 100%;
+  display: inline-block;
+  background: #ccc;
 }
 
-.sidebar .menu a {
-	padding: 1.56em;
-	color: #fff;
-	background-color: #000;
-	display: block;
-	font-size: 1, 5em;
-	text-transform: uppercase;
+.sidebar .menu .menu--a {
+  padding: 1.56em;
+  color: #fff;
+  background-color: #000;
+  display: block;
+  font-size: 1, 5em;
+  text-transform: uppercase;
 }
 
-.sidebar .menu a:hover {
-	background: #262626;
-}
-
-/*contacto*/
-.carousel-item-active img{
-	width: 200px;
-	height: 400px;
+.sidebar .menu .menu--a:hover {
+  background: #262626;
 }
 
 /*FOOTER */
+/*FOOTER */
 .container .footer {
-	background: #fff;
-	font-size: 1.25em;
-	padding: 1.56rem;
-	text-align: right;
-	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-	grid-area: footer;
-	text-align: center;
+  background: black;
+  font-size: 1.25em;
+  padding: 1.56rem;
+  text-align: right;
+  -webkit-box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+          box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: footer;
+  text-align: center;
 }
 
 @media (min-width: 1200px) {
-
-	body {
-		font-size: 16px;
-	}
+  body {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 320px) {
-	body {
-		font-size: 10px;
-	}
-
-	.container {
-		width: 90%;
-		margin: 1.25em auto;
-		grid-template-columns: 1fr;
-		grid-template-rows: auto;
-		grid-template-areas:
-			'header'
-			'destacado'
-			'contenido'
-			'aside'
-			'footer';
-
-	}
-
-	.articulo.destacado {
-		grid-area: destacado;
-		color: white;
-		background-color: #000;
-		box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-
-		grid-template-columns: 1fr;
-	}
-
-	.articulo {
-		grid-template-columns: 1fr;
-		grid-template-rows: auto;
-		grid-row-gap: 7px;
-	}
-.carousel-item img{
-		width: 100%;
-		height: 300px;
-		}
-	
+  body {
+    font-size: 10px;
+  }
+  .container {
+    width: 90%;
+    margin: 1.25em auto;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+        grid-template-areas: 'header' 'destacado' 'contenido' 'aside' 'footer';
+  }
+  .articulo.destacado {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: destacado;
+    color: white;
+    background-color: #000;
+    -webkit-box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+            box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .articulo {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    grid-row-gap: 7px;
+  }
+  .carousel-item img {
+    width: 100%;
+    height: 300px;
+  }
 }
-
 
 @media (max-width: 480px) {
-
-	body {
-		font-size: 12px;
-	}
+  body {
+    font-size: 12px;
+  }
 }
+/*# sourceMappingURL=style.css.map */
