--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,1 +1,25 @@
 $color-fondo: black;
+
+$facebook:blue;
+$twitter: lightblue;
+$instagram: purple;
+
+$redes:(
+    "Facebook":$facebook, 
+    "Twitter": $twitter, 
+    "Instagram": $instagram);
+
+@mixin hover-menu {
+    background: #000;
+	color: white;
+}
+
+.articulo-general{
+    grid-area: destacado;
+	color: white;
+	background-color: #000;
+	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+
+	display: grid;
+	grid-template-columns: 1.3fr 1fr;
+}
