--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,8 +80,7 @@ a {
 }
 
 .menu a:hover {
-	background: #000;
-	color: white;
+@include hover-menu;
 }
 
 /* Articulos */
@@ -147,13 +146,7 @@ form{
 
 /* Articulo Destacado */
 .articulo.destacado {
-	grid-area: destacado;
-	color: white;
-	background-color: #000;
-	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-
-	display: grid;
-	grid-template-columns: 1.3fr 1fr;
+@extend .articulo-general;
 }
 
 .articulo.destacado .contenedor-pequeño {
@@ -270,3 +263,5 @@ height: 400px;
 		font-size: 12px;
 	}
 }
+
+
