--- a/scss/style.scss
+++ b/scss/style.scss
@@ -262,6 +262,40 @@ height: 400px;
 	body {
 		font-size: 12px;
 	}
+
+	.container {
+		width: 90%;
+		margin: 1.25em auto;
+		grid-template-columns: 1fr;
+		grid-template-rows: auto;
+		grid-template-areas:
+			'header'
+			'destacado'
+			'contenido'
+			'aside'
+			'footer';
+
+	}
+
+	.articulo.destacado {
+		grid-area: destacado;
+		color: white;
+		background-color: #000;
+		box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+
+		grid-template-columns: 1fr;
+	}
+
+	.articulo {
+		grid-template-columns: 1fr;
+		grid-template-rows: auto;
+		grid-row-gap: 7px;
+	}
+.carousel-item img{
+		width: 100%;
+		height: 300px;
+		}
+
 }
 
 
