--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,10 @@ a {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (auto)[4];
       grid-template-rows: repeat(4, auto);
-      grid-template-areas: 'header			header   	header' 'destacado		destacado 	destacado' 'contenido		contenido 	aside' 'footer	 		footer 		footer';
+      grid-template-areas: 'header			header   	header'
+ 'destacado		destacado 	destacado'
+ 'contenido		contenido 	aside'
+ 'footer	 		footer 		footer';
 }
 
 /* HEADER */
@@ -318,7 +321,7 @@ form {
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 425px) {
   body {
     font-size: 10px;
   }
@@ -329,7 +332,11 @@ form {
         grid-template-columns: 1fr;
     -ms-grid-rows: auto;
         grid-template-rows: auto;
-        grid-template-areas: 'header' 'destacado' 'contenido' 'aside' 'footer';
+        grid-template-areas: 'header'
+ 'destacado'
+ 'contenido'
+ 'aside'
+ 'footer';
   }
   .articulo.destacado {
     -ms-grid-row: 2;
