--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,7 @@ a {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (auto)[4];
       grid-template-rows: repeat(4, auto);
-      grid-template-areas: 'header			header   	header'
- 'destacado		destacado 	destacado'
- 'contenido		contenido 	aside'
- 'footer	 		footer 		footer';
+      grid-template-areas: 'header			header   	header' 'destacado		destacado 	destacado' 'contenido		contenido 	aside' 'footer	 		footer 		footer';
 }
 
 /* HEADER */
@@ -332,11 +329,7 @@ form {
         grid-template-columns: 1fr;
     -ms-grid-rows: auto;
         grid-template-rows: auto;
-        grid-template-areas: 'header'
- 'destacado'
- 'contenido'
- 'aside'
- 'footer';
+        grid-template-areas: 'header' 'destacado' 'contenido' 'aside' 'footer';
   }
   .articulo.destacado {
     -ms-grid-row: 2;
@@ -365,6 +358,37 @@ form {
 @media (max-width: 480px) {
   body {
     font-size: 12px;
+  }
+  .container {
+    width: 90%;
+    margin: 1.25em auto;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+        grid-template-areas: 'header' 'destacado' 'contenido' 'aside' 'footer';
+  }
+  .articulo.destacado {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: destacado;
+    color: white;
+    background-color: #000;
+    -webkit-box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+            box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .articulo {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    grid-row-gap: 7px;
+  }
+  .carousel-item img {
+    width: 100%;
+    height: 300px;
   }
 }
 /*# sourceMappingURL=style.css.map */
