--- a/css/style.css
+++ b/css/style.css
@@ -312,13 +312,8 @@ form {
 }
 
 /*finaliza footer*/
-@media (min-width: 1200px) {
-  body {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 425px) {
+/* Responsive Mobile*/
+@media (max-width: 768px) {
   body {
     font-size: 10px;
   }
@@ -355,40 +350,9 @@ form {
   }
 }
 
-@media (max-width: 480px) {
+@media (min-width: 1200px) {
   body {
-    font-size: 12px;
-  }
-  .container {
-    width: 90%;
-    margin: 1.25em auto;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    -ms-grid-rows: auto;
-        grid-template-rows: auto;
-        grid-template-areas: 'header' 'destacado' 'contenido' 'aside' 'footer';
-  }
-  .articulo.destacado {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-    grid-area: destacado;
-    color: white;
-    background-color: #000;
-    -webkit-box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-            box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-  .articulo {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    -ms-grid-rows: auto;
-        grid-template-rows: auto;
-    grid-row-gap: 7px;
-  }
-  .carousel-item img {
-    width: 100%;
-    height: 300px;
+    font-size: 16px;
   }
 }
 /*# sourceMappingURL=style.css.map */
