--- a/scss/style.scss
+++ b/scss/style.scss
@@ -209,14 +209,9 @@ height: 400px;
 /*FOOTER */
 @import "_footer";
 
-@media (min-width: 1200px) {
 
-	body {
-		font-size: 16px;
-	}
-}
-
-@media (max-width: 425px) {
+/* Responsive Mobile*/
+@media (max-width: 768px) {
 	body {
 		font-size: 10px;
 	}
@@ -254,48 +249,12 @@ height: 400px;
 		height: 300px;
 		}
 	
-}
-
-
-@media (max-width: 480px) {
-
-	body {
-		font-size: 12px;
 	}
 
-	.container {
-		width: 90%;
-		margin: 1.25em auto;
-		grid-template-columns: 1fr;
-		grid-template-rows: auto;
-		grid-template-areas:
-			'header'
-			'destacado'
-			'contenido'
-			'aside'
-			'footer';
+	@media (min-width: 1200px) {
 
-	}
-
-	.articulo.destacado {
-		grid-area: destacado;
-		color: white;
-		background-color: #000;
-		box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
-
-		grid-template-columns: 1fr;
-	}
-
-	.articulo {
-		grid-template-columns: 1fr;
-		grid-template-rows: auto;
-		grid-row-gap: 7px;
-	}
-.carousel-item img{
-		width: 100%;
-		height: 300px;
+		body {
+			font-size: 16px;
 		}
-
-}
-
-
+	
+	}
